src/objects/SFDC_Offer__c.object
<CustomObject>
    <description>Track Offers from internal resource, or bids from external partners, to work on specific Projects.</description>
    <fields>
        <fullName>Accepted__c</fullName>
        <label>Accepted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>On deck</fullName>
                </value>
                <value>
                    <fullName>No thank you</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Availability__c</fullName>
        <label>Availability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fully Engaged</fullName>
                </value>
                <value>
                    <fullName>Limited Engagement</fullName>
                </value>
                <value>
                    <fullName>Provide Insight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Rate_Available__c</fullName>
        <label>Billing Rate Available</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Projects__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>SFDC_Projects__c</referenceTo>
        <relationshipName>R00N60000001VqpqEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>SFDC_Resource__c</referenceTo>
        <relationshipName>R00N60000001VqtEEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Travel__c</fullName>
        <label>Travel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No restrictions</fullName>
                </value>
                <value>
                    <fullName>Some restrictions</fullName>
                </value>
                <value>
                    <fullName>Cannot travel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_resource_available__c</fullName>
        <label># of resource available</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Offer</label>
    <listViews>
        <fullName>AllOffers</fullName>
        <columns>Projects__c</columns>
        <columns>Resource__c</columns>
        <columns>Availability__c</columns>
        <columns>Comments__c</columns>
        <columns>Accepted__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Offers</label>
    </listViews>
    <nameField>
        <displayFormat>Offer {000}</displayFormat>
        <label>Offer#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>